@@ -145,6 +145,7 @@ commit history.
           from stdbool.h. Note, Bool was defined to be int, but bool is
           likely a shorter type, e.g., signed char. Deprecated TRUE and
           FALSE, use true and false instead.
+        - Deprecated IPOPT_EXPORT macro and introduced IPOPT_CALLCONV.
 
 2021-0x-yy: 3.13.5
         - Allow to use --without-pardiso to disable check for MKL Pardiso [#454]
